update outputs in code to flow all the way through

--- a/Data Access Assistance/Using the Carto API.ipynb
+++ b/Data Access Assistance/Using the Carto API.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 174,
    "metadata": {
     "collapsed": false
    },
@@ -415,7 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"rows\":[],\"time\":0.009,\"fields\":{},\"total_rows\":0}\n"
+      "{\"rows\":[],\"time\":0.006,\"fields\":{},\"total_rows\":0}\n"
      ]
     }
    ],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 175,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 176,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +475,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "INSERT INTO Nathan_Carto_SQL_API_test (country, date_of_obs, description, lat, lon, value) VALUES ('MYS','2005-09-08 00:00:00','test desc',2.9560105660963387,112.41890429577114,-0.6710655756000994), ('RUS','2016-03-25 00:00:00','test desc',52.802967899323335,119.15471660965119,-1.072941965446448), ('nan','2013-06-13 00:00:00','test desc',-69.72542084338207,20.507756044489838,-1.1627982768565652), ('nan','2006-06-26 00:00:00','test desc',-52.11089483712965,74.02033268114269,-0.03638669953060347), ('nan','2001-08-18 00:00:00','test desc',-73.61518344213442,-30.708589845521118,-0.8891944100491568), ('nan','1992-07-22 00:00:00','test desc',6.293190061619384,53.15453743909512,-0.7473774876515684), ('nan','2002-11-25 00:00:00','test desc',-9.229579904064181,58.59142654377766,1.6743398140179895), ('nan','1999-06-06 00:00:00','test desc',11.699074645715129,-54.55957754715354,-0.9608173372842964), ('RUS','2000-01-13 00:00:00','test desc',62.42220320228256,102.61675037110746,-0.48871556206424555), ('USA','2009-02-13 00:00:00','test desc',42.00777942165303,-96.00217910059982,-2.0784990243741994)\n",
+      "INSERT INTO Nathan_Carto_SQL_API_test (country, date_of_obs, description, lat, lon, value) VALUES ('Angola','1994-09-24 00:00:00','test desc',-10.509438009404263,18.477110383717587,-1.3417471057789578), ('nan','2014-07-07 00:00:00','test desc',38.16110083219215,143.06925770530995,0.5662823555875894), ('nan','2008-10-26 00:00:00','test desc',-71.10351854507755,-93.50603681222405,-1.4650786434800536), ('Antarctica','1996-10-25 00:00:00','test desc',-87.9294750004256,29.973593537833835,0.6715711609927818), ('nan','1996-02-07 00:00:00','test desc',-3.5872922676294365,143.86897687991905,0.3101768028187222), ('United States of America','1991-05-18 00:00:00','test desc',42.5165398384525,-112.56475033307254,0.2610125454277355), ('Russia','2004-09-26 00:00:00','test desc',52.2945201707135,35.960885053065795,0.9305478910526954), ('United States of America','2009-10-04 00:00:00','test desc',37.84590585231443,-104.46182671795526,-0.5596071271615324), ('Japan','1993-01-23 00:00:00','test desc',38.41585331140689,140.37626990861565,-0.996406305342893), ('Bolivia','1993-10-21 00:00:00','test desc',-11.717605065622251,-68.8652590511875,-1.2770160792665977)\n",
       "\n",
       "{\"rows\":[],\"time\":0.002,\"fields\":{},\"total_rows\":10}\n"
      ]
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 177,
    "metadata": {
     "collapsed": false
    },
@@ -509,7 +509,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"rows\":[{\"date_of_obs\":\"2005-09-08T00:00:00Z\",\"value\":-0.671065575600099,\"description\":\"test desc\",\"country\":\"MYS\",\"lat\":2.95601056609634,\"lon\":112.418904295771},{\"date_of_obs\":\"2016-03-25T00:00:00Z\",\"value\":-1.07294196544645,\"description\":\"test desc\",\"country\":\"RUS\",\"lat\":52.8029678993233,\"lon\":119.154716609651},{\"date_of_obs\":\"2013-06-13T00:00:00Z\",\"value\":-1.16279827685657,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":-69.7254208433821,\"lon\":20.5077560444898},{\"date_of_obs\":\"2006-06-26T00:00:00Z\",\"value\":-0.0363866995306035,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":-52.1108948371296,\"lon\":74.0203326811427},{\"date_of_obs\":\"2001-08-18T00:00:00Z\",\"value\":-0.889194410049157,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":-73.6151834421344,\"lon\":-30.7085898455211},{\"date_of_obs\":\"1992-07-22T00:00:00Z\",\"value\":-0.747377487651568,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":6.29319006161938,\"lon\":53.1545374390951},{\"date_of_obs\":\"2002-11-25T00:00:00Z\",\"value\":1.67433981401799,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":-9.22957990406418,\"lon\":58.5914265437777},{\"date_of_obs\":\"1999-06-06T00:00:00Z\",\"value\":-0.960817337284296,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":11.6990746457151,\"lon\":-54.5595775471535},{\"date_of_obs\":\"2000-01-13T00:00:00Z\",\"value\":-0.488715562064246,\"description\":\"test desc\",\"country\":\"RUS\",\"lat\":62.4222032022826,\"lon\":102.616750371107},{\"date_of_obs\":\"2009-02-13T00:00:00Z\",\"value\":-2.0784990243742,\"description\":\"test desc\",\"country\":\"USA\",\"lat\":42.007779421653,\"lon\":-96.0021791005998}],\"time\":0.002,\"fields\":{\"date_of_obs\":{\"type\":\"date\"},\"value\":{\"type\":\"number\"},\"description\":{\"type\":\"string\"},\"country\":{\"type\":\"string\"},\"lat\":{\"type\":\"number\"},\"lon\":{\"type\":\"number\"}},\"total_rows\":10}\n"
+      "{\"rows\":[{\"date_of_obs\":\"1994-09-24T00:00:00Z\",\"value\":-1.34174710577896,\"description\":\"test desc\",\"country\":\"Angola\",\"lat\":-10.5094380094043,\"lon\":18.4771103837176},{\"date_of_obs\":\"2014-07-07T00:00:00Z\",\"value\":0.566282355587589,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":38.1611008321921,\"lon\":143.06925770531},{\"date_of_obs\":\"2008-10-26T00:00:00Z\",\"value\":-1.46507864348005,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":-71.1035185450775,\"lon\":-93.5060368122241},{\"date_of_obs\":\"1996-10-25T00:00:00Z\",\"value\":0.671571160992782,\"description\":\"test desc\",\"country\":\"Antarctica\",\"lat\":-87.9294750004256,\"lon\":29.9735935378338},{\"date_of_obs\":\"1996-02-07T00:00:00Z\",\"value\":0.310176802818722,\"description\":\"test desc\",\"country\":\"nan\",\"lat\":-3.58729226762944,\"lon\":143.868976879919},{\"date_of_obs\":\"1991-05-18T00:00:00Z\",\"value\":0.261012545427735,\"description\":\"test desc\",\"country\":\"United States of America\",\"lat\":42.5165398384525,\"lon\":-112.564750333073},{\"date_of_obs\":\"2004-09-26T00:00:00Z\",\"value\":0.930547891052695,\"description\":\"test desc\",\"country\":\"Russia\",\"lat\":52.2945201707135,\"lon\":35.9608850530658},{\"date_of_obs\":\"2009-10-04T00:00:00Z\",\"value\":-0.559607127161532,\"description\":\"test desc\",\"country\":\"United States of America\",\"lat\":37.8459058523144,\"lon\":-104.461826717955},{\"date_of_obs\":\"1993-01-23T00:00:00Z\",\"value\":-0.996406305342893,\"description\":\"test desc\",\"country\":\"Japan\",\"lat\":38.4158533114069,\"lon\":140.376269908616},{\"date_of_obs\":\"1993-10-21T00:00:00Z\",\"value\":-1.2770160792666,\"description\":\"test desc\",\"country\":\"Bolivia\",\"lat\":-11.7176050656223,\"lon\":-68.8652590511875}],\"time\":0.498,\"fields\":{\"date_of_obs\":{\"type\":\"date\"},\"value\":{\"type\":\"number\"},\"description\":{\"type\":\"string\"},\"country\":{\"type\":\"string\"},\"lat\":{\"type\":\"number\"},\"lon\":{\"type\":\"number\"}},\"total_rows\":10}\n"
      ]
     }
    ],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
@@ -536,7 +536,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"rows\":[],\"time\":0.012,\"fields\":{},\"total_rows\":0}\n"
+      "{\"rows\":[],\"time\":0.01,\"fields\":{},\"total_rows\":0}\n"
      ]
     }
    ],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 179,
    "metadata": {
     "collapsed": false
    },
@@ -563,7 +563,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"rows\":[],\"time\":0.002,\"fields\":{\"date_of_obs\":{\"type\":\"date\"},\"value\":{\"type\":\"number\"},\"description\":{\"type\":\"string\"},\"lat\":{\"type\":\"number\"},\"lon\":{\"type\":\"number\"}},\"total_rows\":0}\n"
+      "{\"rows\":[],\"time\":0.001,\"fields\":{\"date_of_obs\":{\"type\":\"date\"},\"value\":{\"type\":\"number\"},\"description\":{\"type\":\"string\"},\"country\":{\"type\":\"string\"},\"lat\":{\"type\":\"number\"},\"lon\":{\"type\":\"number\"}},\"total_rows\":0}\n"
      ]
     }
    ],
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
@@ -604,7 +604,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"rows\":[],\"time\":0.01,\"fields\":{},\"total_rows\":0}\n"
+      "{\"rows\":[],\"time\":0.009,\"fields\":{},\"total_rows\":0}\n"
      ]
     }
    ],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 181,
    "metadata": {
     "collapsed": false
    },
