little bit of clean-up... consolidate spacing in blocks, add 2-block buffer between main code and experimentation section

--- a/Near Real Time data procedures/Vector Handling/OpenAQ.ipynb
+++ b/Near Real Time data procedures/Vector Handling/OpenAQ.ipynb
@@ -1306,7 +1306,7 @@
    "cell_type": "code",
    "execution_count": 350,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2186,8 +2186,7 @@
     "            \"precision\":6\n",
     "        }\n",
     "\n",
-    "        update_table_without_duplicates(**kwargs)\n",
-    "\n"
+    "        update_table_without_duplicates(**kwargs)"
    ]
   },
   {
@@ -2474,7 +2473,136 @@
       "Now handling date: 2016-08-14.csv\n",
       "Number of new observations added to open_aq_locations: 3\n",
       "Completed up until index: 20\n",
-      "Now handling date: 2016-08-15.csv\n"
+      "Now handling date: 2016-08-15.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-16.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-17.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-18.csv\n",
+      "Number of new observations added to open_aq_locations: 7\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-19.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-20.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-21.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-22.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-23.csv\n",
+      "Number of new observations added to open_aq_locations: 5\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-24.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-25.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-26.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-27.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-28.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-29.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-30.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-08-31.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-01.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-02.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-03.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-04.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-05.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-06.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-07.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-08.csv\n",
+      "Number of new observations added to open_aq_locations: 5\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-09.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-10.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-11.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-12.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-13.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-14.csv\n",
+      "Number of new observations added to open_aq_locations: 4\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-15.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-16.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-17.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-18.csv\n",
+      "Number of new observations added to open_aq_locations: 3\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-19.csv\n",
+      "Number of new observations added to open_aq_locations: 5\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-20.csv\n",
+      "Number of new observations added to open_aq_locations: 8\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-21.csv\n",
+      "Number of new observations added to open_aq_locations: 8\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-22.csv\n",
+      "Number of new observations added to open_aq_locations: 7\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-23.csv\n",
+      "Number of new observations added to open_aq_locations: 5\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-24.csv\n",
+      "Number of new observations added to open_aq_locations: 7\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-25.csv\n",
+      "Number of new observations added to open_aq_locations: 7\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-26.csv\n",
+      "Number of new observations added to open_aq_locations: 6\n",
+      "Completed up until index: 20\n",
+      "Now handling date: 2016-09-27.csv\n"
      ]
     }
    ],
@@ -2495,8 +2623,7 @@
     "            \"precision\":6\n",
     "        }\n",
     "\n",
-    "        update_table_without_duplicates(**kwargs)\n",
-    "\n"
+    "        update_table_without_duplicates(**kwargs)"
    ]
   },
   {
@@ -2534,7 +2661,7 @@
    "cell_type": "code",
    "execution_count": 358,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -3368,6 +3495,33 @@
     "    # Add genuinely new observations to the existing table\n",
     "    update_in_batches(new_obs, 20, target_table_name, cols_and_types, cols_with_apostrophes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -5878,40 +6032,6 @@
     "print(current_file_name)\n",
     "\n",
     "#df.to_csv(current_file_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Experimentation"
    ]
   },
   {
