cleaning up metadata and openAQ notebooks

--- a/Near Real Time data procedures/Vector Handling/OpenAQ.ipynb
+++ b/Near Real Time data procedures/Vector Handling/OpenAQ.ipynb
@@ -20,37 +20,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Carto: Authentication and URL setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Base URL for all SQL calls\n",
-    "carto_url = \"https://wri-rw.carto.com/api/v2/sql\"\n",
-    "\n",
-    "# Authentication credentials:\n",
-    "config = ConfigParser()\n",
-    "config.read(\"/Users/nathansuberi/Desktop/Code Portfolio/ResourceWatchCode/.env\")\n",
-    "# FROM: https://resourcewatch.carto.com/u/wri-rw/your_apps\n",
-    "carto_api_token = config.get(\"auth\", \"carto_api_token\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Import required libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -101,14 +76,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Carto: Authentication and URL setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Base URL for all SQL calls\n",
+    "carto_url = \"https://wri-rw.carto.com/api/v2/sql\"\n",
+    "\n",
+    "# Authentication credentials:\n",
+    "config = ConfigParser()\n",
+    "config.read(\"/Users/nathansuberi/Desktop/Code Portfolio/ResourceWatchCode/.env\")\n",
+    "# FROM: https://resourcewatch.carto.com/u/wri-rw/your_apps\n",
+    "carto_api_token = config.get(\"auth\", \"carto_api_token\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Helper Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
     "    A batch_size of 20 seems to work for the location data. \n",
     "    \"\"\"\n",
     "    \n",
-    "    # Define column names\n",
+    "    # Calculate column names once\n",
     "    columns = str(tuple(data_df.columns)).replace(\"'\",\"\")\n",
     "    \n",
     "    # Determine number of batches in which to send data\n",
@@ -152,12 +152,7 @@
     "        sub_df = toggle_apostrophes(sub_df, cols_with_apostrophes, remove=True)\n",
     "        \n",
     "        # Create Insert SQL statement\n",
-    "        values = \", \".join(list(sub_df.apply(lambda row: dump_row_contents(row, cols_and_types), axis=1)))\n",
-    "        insert_value_sql = \"\"\"\n",
-    "        INSERT INTO {table_name} {columns} VALUES {values}\n",
-    "        \"\"\".format(table_name=table_name, columns=columns, values=values)\n",
-    "\n",
-    "        res = sql_api(carto_url, insert_value_sql, carto_api_token)\n",
+    "        res = insert_into_table(sub_df, target_table_name, columns, cols_and_types)\n",
     "\n",
     "        # Help with trouble shooting\n",
     "        # Display response error, the data that created the error, and break the cycle\n",
@@ -204,7 +199,9 @@
     "            df[col] = df[col].apply(lambda row: str(row).replace(\"&#8217\", \"'\"))\n",
     "    return(df)\n",
     "\n",
-    "def update_table_without_duplicates(data_df, target_table_name, cols_and_types, float_cols=[\"latitude\", \"longitude\"], precision=8, cols_with_apostrophes=None, consider_partial_history=None):\n",
+    "def update_table_without_duplicates(data_df, target_table_name, cols_and_types, \n",
+    "                                    float_cols=[\"latitude\", \"longitude\"], precision=8, cols_with_apostrophes=None, \n",
+    "                                    datetime_column=None, datetime_cutoff=None, want_data_since_cutoff=True):\n",
     "    \"\"\" \n",
     "    Determines whether there are new locations to add to the table.\n",
     "    Sends an SQL statement and returns the result of that operation to stdout.\n",
@@ -212,35 +209,19 @@
     "    look_back_length parameter allows for de-duping with a table while only considering a limited\n",
     "    history of the recent record\n",
     "    \"\"\"\n",
+    "    \n",
+    "    # If target table doesn't exist, create it\n",
+    "    ## TO DO\n",
+    "    \n",
     "    # column names to include\n",
     "    column_names = list(cols_and_types.keys())\n",
     "    \n",
-    "    # Read in existing table, set look_back if desired\n",
-    "    # Particularly for updating OpenAQ history, as opposed to locations list (look_back_length=None)\n",
-    "    # NOTE: this is confusing parameter use. Consider a better formulation.\n",
-    "    \n",
-    "    if not consider_partial_history:\n",
-    "        # Update against entire table\n",
-    "        select_all_sql = \"\"\"\n",
-    "        SELECT * FROM {table_name}\n",
-    "        \"\"\".format(table_name=target_table_name)\n",
-    "        res = sql_api(carto_url, select_all_sql, carto_api_token)\n",
-    "    else:\n",
-    "        \n",
-    "        ##\n",
-    "        ### TO DO: ensure that this works!\n",
-    "        ##\n",
-    "        \n",
-    "        # Update against partial history\n",
-    "        select_all_sql = \"\"\"\n",
-    "        SELECT * FROM {table_name} WHERE lastUpdated < {length_of_partial_history}\n",
-    "        \"\"\".format(table_name=target_table_name, length_of_partial_history=consider_partial_history)\n",
-    "        res = sql_api(carto_url, select_all_sql, carto_api_token)\n",
-    "        \n",
+    "    # Select data from the target_table to use in de-duping procedure\n",
+    "    res = select_from_table(target_table_name, datetime_column, datetime_cutoff, want_data_since_cutoff)  \n",
     "    target_table = pd.DataFrame(res.json()[\"rows\"], columns=column_names)\n",
     "    \n",
     "    # Fix precision on float columns\n",
-    "    target_table = fix_precision_of_floats(target_table, float_cols, 8)\n",
+    "    target_table = fix_precision_of_floats(target_table, float_cols, precision)\n",
     "    \n",
     "    # Fix apostrophe change\n",
     "    target_table = toggle_apostrophes(target_table, cols_with_apostrophes, remove=False)\n",
@@ -250,7 +231,7 @@
     "    obs = data_df[column_names] #.set_index(index_cols)\n",
     "    obs = obs.drop_duplicates(keep=\"first\")\n",
     "    obs = keep_geolocated(obs)\n",
-    "    obs = fix_precision_of_floats(obs, float_cols, 8)\n",
+    "    obs = fix_precision_of_floats(obs, float_cols, precision)\n",
     "    \n",
     "    # De-dupe between existing table and new observations\n",
     "    # https://stackoverflow.com/questions/29464234/compare-python-pandas-dataframes-for-matching-rows\n",
@@ -262,7 +243,84 @@
     "    print(\"Number of new observations added to\", target_table_name + \":\", new_obs.shape[0])\n",
     "    \n",
     "    # Add genuinely new observations to the existing table\n",
-    "    update_in_batches(new_obs, 20, target_table_name, cols_and_types, cols_with_apostrophes)"
+    "    update_in_batches(new_obs, 20, target_table_name, cols_and_types, cols_with_apostrophes)\n",
+    "    \n",
+    "    \n",
+    "def create_table(target_table_name, cols_and_types):\n",
+    "    \"\"\"SQL statement to create a table\"\"\"\n",
+    "    \n",
+    "    cols_and_types = \", \".join([col + \" \" + cols_and_types[col] for col in cols_and_types])\n",
+    "\n",
+    "    create_table_sql = \"\"\"\n",
+    "    CREATE TABLE {table_name}\n",
+    "     (\n",
+    "     {column_names_and_data_types}\n",
+    "     );\n",
+    "    \"\"\".format(table_name=target_table_name, column_names_and_data_types=cols_and_types)\n",
+    "\n",
+    "    res = sql_api(carto_url, create_table_sql, carto_api_token)\n",
+    "    print(res.text)\n",
+    "    \n",
+    "def destroy_table(target_table_name):\n",
+    "    \"\"\"SQL statement to drop a table\"\"\"\n",
+    "    \n",
+    "    delete_table_sql = \"\"\"\n",
+    "    DROP TABLE {table_name}\n",
+    "    \"\"\".format(table_name=target_table_name)\n",
+    "\n",
+    "    res = sql_api(carto_url, delete_table_sql, carto_api_token)\n",
+    "    print(res.text)\n",
+    "    \n",
+    "def select_from_table(target_table_name, datetime_column=None, datetime_cutoff=None, want_data_since_cutoff=True):\n",
+    "    \"\"\"\n",
+    "    Standard SQL statement to select from a table, \n",
+    "    with support for a single WHERE clause \n",
+    "    to select before or after a certain time cutoff\n",
+    "    \"\"\"\n",
+    "    # If either a datetime_column or datetime_cutoff are provided, they both should be\n",
+    "    # The following statement will cause the function to fail if not\n",
+    "    # The datetime_column and datetime_cutoff should both be single strings\n",
+    "    # The datetime_\n",
+    "    if(datetime_column or datetime_cutoff):\n",
+    "        assert(datetime_column and datetime_cutoff)\n",
+    "        assert(type(datetime_column)==str and type(datetime_cutoff)==str)\n",
+    "    \n",
+    "    # If no datetime_cutoff, select all from the target_table\n",
+    "    if not datetime_cutoff:\n",
+    "        select_all_sql = \"\"\"\n",
+    "        SELECT * FROM {table_name}\n",
+    "        \"\"\".format(table_name=target_table_name)\n",
+    "        res = sql_api(carto_url, select_all_sql, carto_api_token)\n",
+    "        return(res)\n",
+    "    \n",
+    "    # If there is a datetime_cutoff, \n",
+    "    # either take the data since that date or previous to that date\n",
+    "    else:\n",
+    "        if want_data_since_cutoff:\n",
+    "            comparison_operator = \"<=\"\n",
+    "        else:\n",
+    "            comparison_operator = \">=\"\n",
+    "            \n",
+    "        select_all_sql = \"\"\"\n",
+    "        SELECT * FROM {table_name} WHERE {datetime_column} {comparison_operator} {datetime_cutoff}\n",
+    "        \"\"\".format(table_name=target_table_name, \n",
+    "                   datetime_column=datetime_column,\n",
+    "                   comparison_operator=comparison_operator,\n",
+    "                   datetime_cutoff=datetime_cutoff)\n",
+    "        res = sql_api(carto_url, select_all_sql, carto_api_token)\n",
+    "        return(res)\n",
+    "        \n",
+    "def insert_into_table(data_df, target_table_name, column_names, cols_and_types):\n",
+    "    \"\"\"Craft insert statement for Carto table\"\"\"\n",
+    "    \n",
+    "    values = \", \".join(list(data_df.apply(lambda row: dump_row_contents(row, cols_and_types), axis=1)))\n",
+    "    \n",
+    "    insert_value_sql = \"\"\"\n",
+    "    INSERT INTO {table_name} {columns} VALUES {values}\n",
+    "    \"\"\".format(table_name=target_table_name, columns=columns, values=values)\n",
+    "\n",
+    "    res = sql_api(carto_url, insert_value_sql, carto_api_token)\n",
+    "    return(res)"
    ]
   },
   {
@@ -302,16 +360,7 @@
     "# ### CAREFUL ###\n",
     "# # Leave commented out majority of time, unless sure you want to delete history\n",
     "\n",
-    "# # Delete table sql\n",
-    "# # Select all from a table\n",
-    "# table_name = \"open_aq_history\"\n",
-    "\n",
-    "# delete_table_sql = \"\"\"\n",
-    "# DROP TABLE {table_name}\n",
-    "# \"\"\".format(table_name=table_name)\n",
-    "\n",
-    "# res = sql_api(carto_url, delete_table_sql, carto_api_token)\n",
-    "# print(res.text)"
+    "# destroy_table(\"open_aq_history\")"
    ]
   },
   {
@@ -323,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -352,19 +401,7 @@
     "}\n",
     "\n",
     "# Create table sql\n",
-    "table_name = \"open_aq_history\"\n",
-    "\n",
-    "columns_and_data_types_history = \", \".join([col + \" \" + cols_and_types_history[col] for col in cols_and_types_history])\n",
-    "\n",
-    "create_table_sql = \"\"\"\n",
-    "CREATE TABLE {table_name}\n",
-    " (\n",
-    " {columns_and_data_types}\n",
-    " );\n",
-    "\"\"\".format(table_name=table_name, columns_and_data_types=columns_and_data_types_history)\n",
-    "\n",
-    "res = sql_api(carto_url, create_table_sql, carto_api_token)\n",
-    "print(res.text)"
+    "create_table(\"open_aq_history\", cols_and_types_history)"
    ]
   },
   {
@@ -405,14 +442,7 @@
     "# ### CAREFUL ###\n",
     "# # Leave commented out majority of time, unless sure you want to delete table of observed locations\n",
     "\n",
-    "# table_name = \"open_aq_locations\"\n",
-    "\n",
-    "# delete_table_sql = \"\"\"\n",
-    "# DROP TABLE {table_name}\n",
-    "# \"\"\".format(table_name=table_name)\n",
-    "\n",
-    "# res = sql_api(carto_url, delete_table_sql, carto_api_token)\n",
-    "# print(res.text)"
+    "# destroy)table(\"open_aq_locations\")"
    ]
   },
   {
@@ -424,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -433,7 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"rows\":[],\"time\":0.008,\"fields\":{},\"total_rows\":0}\n"
+      "{\"error\":[\"relation \\\"open_aq_locations\\\" already exists\"]}\n"
      ]
     }
    ],
@@ -449,19 +479,7 @@
     "}\n",
     "\n",
     "# Create table sql\n",
-    "table_name = \"open_aq_locations\"\n",
-    "\n",
-    "columns_and_data_types_locations = \", \".join([col + \" \" + cols_and_types_locations[col] for col in cols_and_types_locations])\n",
-    "\n",
-    "create_table_sql = \"\"\"\n",
-    "CREATE TABLE {table_name}\n",
-    " (\n",
-    " {columns_and_data_types}\n",
-    " );\n",
-    "\"\"\".format(table_name=table_name, columns_and_data_types=columns_and_data_types_locations)\n",
-    "\n",
-    "res = sql_api(carto_url, create_table_sql, carto_api_token)\n",
-    "print(res.text)"
+    "create_table(\"open_aq_locations\", cols_and_types_locations)"
    ]
   },
   {
@@ -489,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -502,9 +520,9 @@
       "Dec 8 times: ['2017-12-08T00:00:00.000Z' '2017-12-08T01:00:00.000Z'\n",
       " '2017-12-08T02:00:00.000Z' ..., '2017-12-08T22:24:09.000Z'\n",
       " '2017-12-08T22:22:26.000Z' '2017-12-08T22:24:26.000Z']\n",
-      "Dec 9 times: ['2017-12-09T00:00:00.000Z' '2017-12-09T01:00:00.000Z'\n",
-      " '2017-12-09T02:00:00.000Z' ..., '2017-12-09T23:42:00.000Z'\n",
-      " '2017-12-09T22:44:19.000Z' '2017-12-09T22:44:17.000Z']\n"
+      "Dec 9 times: ['2017-12-09T00:00:00.000Z' '2017-12-09T00:02:17.000Z'\n",
+      " '2017-12-09T00:02:18.000Z' ..., '2017-12-09T23:44:24.000Z'\n",
+      " '2017-12-09T23:45:00.000Z' '2017-12-09T23:55:00.000Z']\n"
      ]
     }
    ],
@@ -531,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
