clean up structure on OpenAQ code

--- a/Metadata Management/Upload Metadata to API.ipynb
+++ b/Metadata Management/Upload Metadata to API.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -190,10 +190,10 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 96902    0 96902    0     0   248k      0 --:--:-- --:--:-- --:--:--  249k\n",
+      "100 97284    0 97284    0     0   398k      0 --:--:-- --:--:-- --:--:--  399k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  745k    0  745k    0     0  1196k      0 --:--:-- --:--:-- --:--:-- 1195k\n",
+      "100  745k    0  745k    0     0  1900k      0 --:--:-- --:--:-- --:--:-- 1895k\n",
       "These cause an error: [(2, '???'), (12, 'bio.010'), (18, 'bio.016'), (36, 'cit.007'), (79, 'com.003'), (96, 'com.027'), (103, 'dis.006'), (107, 'dis.010'), (110, 'ene.002'), (112, 'ene.004'), (117, 'ene.009'), (121, 'ene.016'), (129, 'foo.002'), (134, 'foo.007'), (176, 'for.011'), (185, 'for.020b'), (200, 'soc.011'), (226, 'soc.042'), (229, 'soc.046'), (236, 'soc.060')]\n"
      ]
     }
@@ -254,7 +254,7 @@
     "current_mdata[\"final_ids\"] = current_mdata[id_col]\n",
     "ids_on_backoffice = pd.notnull(current_mdata[\"final_ids\"])\n",
     "mdata_for_ids_on_backoffice = current_mdata.loc[ids_on_backoffice]\n",
-    "mdata_for_ids_on_backoffice.set_index(\"final_ids\", inplace=True)\n",
+    "mdata_for_ids_on_backoffice = mdata_for_ids_on_backoffice.reset_index().set_index(\"final_ids\")\n",
     "\n",
     "# Save the updated metadata\n",
     "mdata_for_ids_on_backoffice.to_csv(\"/Users/nathansuberi/Desktop/RW_Data/mdata_for_ids_on_backoffice.csv\")"
