trial code for merging CC layers

--- a/Notebooks for Exploring Specific Datasets/Sea Level Rise Merging.ipynb
+++ b/Notebooks for Exploring Specific Datasets/Sea Level Rise Merging.ipynb
@@ -40,28 +40,37 @@
     }
    ],
    "source": [
+    "merged_cc_data = \"merged_cc_data.tif\"\n",
+    "\n",
     "with rio.open(\"https://wri-public-data.s3.amazonaws.com/resourcewatch/raster/cli_024_sea_level_rise/cli_024_sea_level_rise_ft.tif\", \"r\") as src:\n",
     "    profile = src.profile\n",
-    "    num_bands = profile[\"count\"]\n",
-    "    print(num_bands)\n",
-    "    #data = src.read(indexes=1)\n",
-    "    windows = src.block_windows()\n",
-    "    for win_ix, win in windows:\n",
-    "        new_data = np.zeros((256, 256))\n",
-    "        print(new_data.shape)\n",
-    "        \n",
-    "        # Loop over windows in the CC data, add values in the new_data block\n",
-    "        for bnd in range(num_bands,0, -1):\n",
-    "            print(bnd)\n",
-    "            print(win, win_ix)\n",
-    "            \n",
-    "            hardcoded_window = ((100000, 100200),(200000, 200200))\n",
-    "            data = src.read(window=hardcoded_window, indexes=1)\n",
-    "            print(data)\n",
-    "            break \n",
-    "        break\n",
+    "    print(profile)\n",
     "    \n",
-    "print(profile)"
+    "profile[\"count\"] = 1\n",
+    "\n",
+    "with rio.open(merged_cc_data, \"w\", **profile) as dst:\n",
+    "    # Iterate over the input data, updating the merged file as we go\n",
+    "    # Do this for every block in the larger block_windows\n",
+    "    \n",
+    "    with rio.open(\"https://wri-public-data.s3.amazonaws.com/resourcewatch/raster/cli_024_sea_level_rise/cli_024_sea_level_rise_ft.tif\", \"r\") as src:\n",
+    "        profile = src.profile\n",
+    "        \n",
+    "        num_bands = profile[\"count\"]\n",
+    "        blockx = profile[\"blockxsize\"]\n",
+    "        blocky = profile[\"blockysize\"]\n",
+    "        dtype = profile[\"dtype\"]\n",
+    "        \n",
+    "        windows = src.block_windows()\n",
+    "        for win_ix, window in windows:\n",
+    "            \n",
+    "            merged_data = np.zeros((blockx,blocky), dtype=dtype)\n",
+    "            \n",
+    "            for bnd in range(num_bands, 0, -1):\n",
+    "                print(\"Copying data from band\", bnd)\n",
+    "                data = src.read(indexes=bnd, window=window)\n",
+    "                merged_data[data==1] = bnd\n",
+    "\n",
+    "            dst.write(merged_data, indexes=1, window=window)"
    ]
   },
   {
