update note on how to randomly select from 2d numpy array

--- a/Notebooks for Exploring Specific Datasets/Sea Level Rise Merging.ipynb
+++ b/Notebooks for Exploring Specific Datasets/Sea Level Rise Merging.ipynb
@@ -129,6 +129,9 @@
     "    \n",
     "    for bnd in range(1,num_bands+1):\n",
     "        print(\"Writing band\", bnd)\n",
+    "        \n",
+    "        # How to randomly select in shape of 2d array:\n",
+    "        # https://www.reddit.com/r/learnpython/comments/2ol1n4/taking_random_sample_from_a_2d_numpy_array/\n",
     "        new_ones = np.random.choice([True,False], new_data.shape)\n",
     "        new_data[new_ones] = 1\n",
     "        dst.write(new_data, indexes=bnd)"
